--- a/style.css
+++ b/style.css
@@ -420,14 +420,6 @@ article{
     padding: 10px 0 0 0;
 }
 
-.home article{
-    padding: 30px 0;
-}
-
-.home .row-articles .span6:nth-child(n+3) article{
-    border-top: 2px solid #f6f6f6;
-}
-
 article h2{
     font-weight: 400;
     font-size: 36px;
@@ -1674,15 +1666,6 @@ section.news .span6{
     width: 50%;
 }
 
-section.news .row-articles article h4{
-    height: 40px;
-    overflow: hidden;
-}
-
-section.news .row-articles .span6:nth-child(2n+1) article{
-    padding-right: 30px;
-}
-
 
 /* ---------------------------------------------------------------
     aside
@@ -2113,6 +2096,99 @@ ul.person-tiles li .inner-wrap{
     display: block;
     width: 100%;
     min-height: 58px;
+}
+
+
+/*featured-articles*/
+ul.featured-articles{
+    display: table;
+    width: 100%;
+}
+
+.page ul.featured-articles{
+    padding-left: 0;
+    list-style-type: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    margin-top: 40px;
+}
+
+.page ul.featured-articles li{
+    line-height: 1;
+    margin-bottom: 0;
+}
+
+ul.featured-articles article{
+    padding: 30px 0;
+}
+
+ul.featured-articles li{
+    display: table;
+    width: 50%;
+    float: left;
+}
+
+ul.featured-articles li h4{
+    margin-bottom: 25px;
+    font-size: 16px;
+    line-height: 22px;
+}
+
+ul.featured-articles li h4 a{
+    color: #22293b
+}
+
+ul.featured-articles li h4 a:hover{
+    color: #36baac;
+}
+
+ul.featured-articles li:first-child{
+    width: 100%;
+    float: none;
+}
+
+ul.featured-articles li:first-child a.tile-img-link{
+    width: 230px;
+    height: 180px;
+    margin-right: 30px;
+    margin-bottom: 0;
+}
+
+ul.featured-articles li:first-child .article-content-wrap{
+    width: calc(100% - 260px);
+}
+
+ul.featured-articles li:first-child h4{
+    font-size: 22px;
+    line-height: 24px;
+    margin-bottom: 12px;
+    position: relative;
+    top: -5px;
+}
+
+ul.featured-articles li:first-child p{
+    font-size: 16px;
+    line-height: 20px;
+    height: 60px;
+    margin-top: 0;
+    margin-bottom: 23px;
+}
+
+ul.featured-articles li:first-child .btn.btn-small,
+ul.featured-articles li:first-child .btn.btn-small:hover{
+    padding: 10px 18px;
+    font-size: 14px;
+}
+
+ul.featured-articles li:nth-child(2n+3){
+    padding-left: 30px;
+}
+
+ul.featured-articles li:nth-last-child(n+3){
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+ul.featured-articles li a.tile-img-link{
+    margin-bottom: 0;
 }
 
 
