--- a/style.css
+++ b/style.css
@@ -193,6 +193,20 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 }
 
 
+/*b-lazy*/
+.b-lazy {
+    -webkit-transition: opacity 500ms ease-in-out;
+    -moz-transition: opacity 500ms ease-in-out;
+    -o-transition: opacity 500ms ease-in-out;
+    transition: opacity 500ms ease-in-out;
+    max-width: 100%;
+    opacity: 0;
+}
+.b-lazy.b-loaded {
+    opacity: 1;
+}
+
+
 /*social share plugin*/
 .ssba, .ssba a{
     position: relative;
